[tool.poetry]
name = "imperial-notifier"
version = "0.1.0"
description = ""
authors = ["Bertrand Fan <bertrand@fan.net>"]
readme = "README.md"
packages = [{include = "imperial_notifier"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
appcfg = "^1.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
